# auto-space-presser

./: .gitignore  LICENSE  README.md  fix-build-path.sh  package.json  pnpm-lock.yaml  test-build.sh
.github/: SLACK_NOTIFICATION_SETUP.md
.github/workflows/: auto-build.yml  check.yml  release.yml
auto-space-presser-python/: EXE使用说明.md  LICENSE  README.md  auto_key_app.py  build_exe.py  build_exe_optimized.py  optimize_exe_size.bat  requirements.txt
new_project_directory/: .gitignore  package.json
new_project_directory/.github/workflows/: check.yml  release.yml
new_project_directory/src-tauri/: Cargo.toml  tauri.conf.json
new_project_directory/src-tauri/src/: main.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  keyboard.json
src-tauri/src/: lib.rs
